# job-hunt

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  CODEX.md  PERSISTENT_EXTENSION_SHELL.md  README.md  docker-compose.yml  skills-lock.json
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_local_opportunity_storage.py  002_job_search_runs.py  003_linkedin_search_provider.py  004_linkedin_runs_e2e.py  005_job_review_intelligence.py  006_full_time_email_sending.py  007_google_oauth_resume_upload.py  008_remove_global_limits.py  009_user_auth_ownership.py  010_user_settings_portfolio_url.py  011_ai_bulk_email_nullable_template.py  012_linkedin_ai_filters.py  013_discarded_external_job_source_placeholder.py  014_full_time_workflow_fixes.py  015_ai_field_assistant.py  016_field_assistant_resume_context.py  017_sender_profile_and_email_cleanup.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: errors.py  router.py
apps/api/app/core/: config.py
apps/api/app/db/: seed.py  session.py
apps/api/app/models/: __init__.py  email.py  field_assistant.py  job_search_run.py  opportunity.py  user.py  user_settings.py
apps/api/app/schemas/: __init__.py  auth.py  email.py  field_assistant.py  job_search_run.py  opportunity.py  user_settings.py
apps/api/app/services/: ai_email_generation_service.py  auth_service.py  auth_session_service.py  bulk_email_service.py  (+21 more)
apps/api/tests/: conftest.py
apps/worker/: pyproject.toml
apps/worker/app/: __init__.py  main.py
apps/worker/tests/: __init__.py  conftest.py
(+515 files in other folders)
